--- a/react-portfolio-prismic/package.json
+++ b/react-portfolio-prismic/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "react-portfolio",
+  "name": "react-portfolio-prismic",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -10,26 +10,19 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@fontsource/inter": "^5.0.17",
-    "@fontsource/outfit": "^5.0.12",
-    "@fontsource/roboto": "^5.0.12",
     "@prismicio/client": "^7.3.1",
     "@prismicio/react": "^2.7.3",
-    "global": "^4.4.0",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-router-dom": "^6.22.3",
-    "sass": "^1.71.1"
+    "react-dom": "^18.2.0"
   },
   "devDependencies": {
-    "@types/react": "^18.2.56",
-    "@types/react-dom": "^18.2.19",
+    "@types/react": "^18.2.64",
+    "@types/react-dom": "^18.2.21",
     "@vitejs/plugin-react": "^4.2.1",
-    "eslint": "^8.56.0",
-    "eslint-plugin-react": "^7.33.2",
+    "eslint": "^8.57.0",
+    "eslint-plugin-react": "^7.34.0",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.5",
-    "vite": "^5.1.5",
-    "vite-plugin-sdk": "^0.1.2"
+    "vite": "^5.1.6"
   }
 }
