--- a/react-portfolio-contentful/package.json
+++ b/react-portfolio-contentful/package.json
@@ -10,6 +10,8 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@contentful/rich-text-react-renderer": "^15.19.6",
+    "@contentful/rich-text-types": "^16.3.5",
     "contentful": "^10.8.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
