--- a/react-portfolio-contentful/package.json
+++ b/react-portfolio-contentful/package.json
@@ -14,7 +14,8 @@
     "@contentful/rich-text-types": "^16.3.5",
     "contentful": "^10.8.1",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-router-dom": "^6.22.3"
   },
   "devDependencies": {
     "@types/react": "^18.2.64",
