Prepping react site for upload to firebase.

--- a/react-portfolio-contentful/.env
+++ b/react-portfolio-contentful/.env
@@ -1,2 +1,12 @@
 VITE_REACT_APP_SPACE_ID=jwwsi6yg5ser
 VITE_REACT_APP_CDA_TOKEN=_9p3Q-zBodSzjc1ObgbLdabl-t7aIOc4Sd5fcApTFW4
+
+
+VITE_API_KEY=AIzaSyCLQ9LGqsaXu4RJFnh0tegBHsPym87VIyg
+VITE_AUTH_DOMAIN=farid-portfolio-site.firebaseapp.com
+VITE_DATABASE_URL=ttps://farid-portfolio-site.firebaseio.com
+VITE_PROJECT_ID=farid-portfolio-site
+VITE_STORAGE_BUCKET=farid-portfolio-site.appspot.com
+VITE_MESSAGING_SENDER_ID=452890826035
+VITE_APP_ID=1:452890826035:web:69946747478a95ef025a46
+VITE_MEASUREMENT_ID=G-99BQGKHRBG
