--- a/react-portfolio-contentful/package.json
+++ b/react-portfolio-contentful/package.json
@@ -13,6 +13,7 @@
     "@contentful/rich-text-react-renderer": "^15.19.6",
     "@contentful/rich-text-types": "^16.3.5",
     "contentful": "^10.8.2",
+    "firebase": "^10.6.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.22.3"
