Final updates before deploying new site to firebase.

--- a/react-portfolio-contentful/.firebaserc
+++ b/react-portfolio-contentful/.firebaserc
@@ -1,5 +1,11 @@
 {
   "projects": {
     "default": "farid-portfolio-site"
+  },
+  "targets": {},
+  "etags": {
+    "farid-portfolio-site": {
+      "extensionInstances": {}
+    }
   }
 }
