--- a/react-portfolio-contentful/firebase.json
+++ b/react-portfolio-contentful/firebase.json
@@ -15,11 +15,20 @@
     }
   ],
   "hosting": {
-    "public": "public",
+    "public": "dist",
     "ignore": [
       "firebase.json",
       "**/.*",
       "**/node_modules/**"
+    ],
+    "rewrites": [
+      {
+        "source": "**",
+        "destination": "/index.html"
+      }
+    ],
+    "predeploy": [
+      "npm run build"
     ]
   },
   "storage": {
