--- a/react-portfolio-contentful/package.json
+++ b/react-portfolio-contentful/package.json
@@ -3,6 +3,7 @@
   "private": true,
   "version": "0.0.0",
   "type": "module",
+  "homepage": "/",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
@@ -16,7 +17,7 @@
     "firebase": "^10.6.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.22.3"
+    "react-router-dom": "6.4"
   },
   "devDependencies": {
     "@types/react": "^18.2.64",
