recent build with most bugs fixed and deployed

--- a/react-portfolio-contentful/firebase.json
+++ b/react-portfolio-contentful/firebase.json
@@ -21,9 +21,32 @@
       "**/.*",
       "**/node_modules/**"
     ],
+    "headers": [
+      {
+        "source": "**/*.js",
+        "headers": [
+          {
+            "key": "Content-Type",
+            "value": "application/javascript"
+          },
+          {
+            "key": "Content-Type",
+            "value": "text/javascript"
+          },
+          {
+            "key": "Cache-Control",
+            "value": "no-cache"
+          }
+        ]
+      }
+    ],
     "rewrites": [
       {
         "source": "**",
+        "destination": "/index.html"
+      },
+      {
+        "source": "/project_details/**",
         "destination": "/index.html"
       }
     ],
